WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297412
Paint text-decoration-line: spelling-error
https://bugs.webkit.org/show_bug.cgi?id=297412
Summary
Paint text-decoration-line: spelling-error
Vitor Roriz
Reported
2025-08-14 12:24:54 PDT
Paint text-decoration-line: spelling-error
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-14 12:25:03 PDT
<
rdar://problem/158343332
>
Vitor Roriz
Comment 2
2025-08-14 12:41:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49403
EWS
Comment 3
2025-09-11 11:42:16 PDT
Committed
299864@main
(adddeadab02a): <
https://commits.webkit.org/299864@main
> Reviewed commits have been landed. Closing PR #49403 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug