Paint text-decoration-line: spelling-error https://bugs.webkit.org/show_bug.cgi?id=297412 rdar://158343332

Reviewed by Aditya Keerthi.

- Paint spelling-error decoration for an element which effective text-decoration-line
(textDecorationLineInEffect) style is set to 'spelling-error'

- SpellingError marked text that is styled via ::spelling-error is removed from being
painted as a marker, such that it is painted as regular text-decoration (TextDecorationPainter),
honoring the style set,  unless its text-decoration-line is spelling-error itself.
In the latter case we should paint decoration with our native spelling error markers.

* LayoutTests/css3/text-decoration/text-decoration-line-spelling-error-1-expected.html: Added.
* LayoutTests/css3/text-decoration/text-decoration-line-spelling-error-1.html: Added.
* LayoutTests/css3/text-decoration/text-decoration-line-spelling-error-2-expected.html: Added.
* LayoutTests/css3/text-decoration/text-decoration-line-spelling-error-2.html: Added.
* LayoutTests/css3/text-decoration/text-decoration-line-spelling-error-3-expected.html: Added.
* LayoutTests/css3/text-decoration/text-decoration-line-spelling-error-3.html: Added.
* LayoutTests/platform/win/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/css/html.css:
(:root::spelling-error):
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::removeMarkersPaintedByTextDecorationPainter):
(WebCore::markedTextForTextDecorationLine):
(WebCore::TextBoxPainter::paintPlatformDocumentMarkers):

Canonical link: https://commits.webkit.org/299864@main